# coro_http

./: CMakeLists.txt  CONTROL  LICENSE  README.md  TESTING.md
.github/workflows/: ci.yml  windows.yml
docs/: EXAMPLES.md
examples/: advanced_example.cpp  auth_features_example.cpp  auth_features_local_test.cpp  coro_example.cpp  https_example.cpp  keepalive_example.cpp  proxy_example.cpp  retry_example.cpp  sync_example.cpp
include/coro_http/: auth.hpp  client_config.hpp  connection_pool.hpp  cookie_jar.hpp  coro_http.hpp  coro_http_client.hpp  form_data.hpp  http_client.hpp  http_parser.hpp  http_request.hpp  interceptor.hpp  rate_limiter.hpp  url_parser.hpp
